# Human-Following-Bot

./: CMakeLists.txt  README.md
RECEIVER/: sdkconfig  sdkconfig.old
RECEIVER/main/: CMakeLists.txt  main.cpp  main.h
RECEIVER/refrences/esp_timer/: README.md  pytest_esp_timer.py  sdkconfig.defaults
RECEIVER/refrences/esp_timer/main/: esp_timer_example_main.c
RECEIVER/utils/Headers/: Comm.h  Compass.h  GPIO.h  Motor.h  Navigator.h  PWM.h  Sensor.h  Timer.h  sensor.h
RECEIVER/utils/Src/: Comm.cpp  Compass.cpp  GPIO.cpp  Motor.cpp  Navigator.cpp  PWM.cpp  Sensor.cpp  Timer.cpp  motor.cpp  sensor.cpp
Receiver/: Motor Managment.c
TRANSMITTER/: sdkconfig  sdkconfig.old
TRANSMITTER/main/: CMakeLists.txt  main.cpp  main.h
TRANSMITTER/utils/Headers/: Comm.h  Compass.h  GPIO.h  Sensor.h  Timer.h
TRANSMITTER/utils/Src/: Comm.cpp  Compass.cpp  GPIO.cpp  Sensor.cpp
Transmitter/Bluetooth/: gatts_demo.c
main/: CMakeLists.txt  main.cpp
utils/Src/: GPIO.cpp  PWM.cpp  sensor.cpp
utils/headers/: GPIO.h  PWM.h  sensor.h
